# bevy_persistence_database

./: .dockerignore  .gitignore  Cargo.toml  Makefile  README.md  deleteme.patch
bevy_arangodb/: Cargo.toml
bevy_arangodb/src/: lib.rs
bevy_arangodb/tests/: integration_tests.rs  persisting.rs  querying.rs
bevy_arangodb/tests/common/: components.rs  mod.rs  resources.rs  setup.rs  test_utils.rs
bevy_arangodb/tests/integration/: arango_tests.rs  arangors_tests.rs  batching_tests.rs  commit_plugin_tests.rs  concurrency_tests.rs  mod.rs  performance_tests.rs  persisting_tests.rs  plugin_tests.rs  querying_tests.rs
bevy_arangodb_core/: Cargo.toml
bevy_arangodb_core/src/: arango_connection.rs  arango_query.rs  arango_session.rs  bevy_plugin.rs  debug_utils.rs  guid.rs  internal_traits.rs  lib.rs  persist.rs  query_dsl.rs  registration.rs
bevy_arangodb_core/src/components/: guid.rs  mod.rs
bevy_arangodb_core/src/db/: arango_connection.rs  connection.rs  mod.rs  postgres_connection.rs
bevy_arangodb_core/src/plugins/: bevy_plugin.rs  commit_plugin.rs  mod.rs  persistence_plugin.rs
bevy_arangodb_core/src/query/: arango_query.rs  builder.rs  cache.rs  dsl.rs  expression.rs  join.rs  loader.rs  mod.rs  persistence_query.rs  persistence_query_specification.rs  persistence_query_system_param.rs  presence_spec.rs  query_data_to_components.rs  query_param.rs  spec.rs  tls_config.rs
bevy_arangodb_core/src/resources/: arango_session.rs  mod.rs  persistence_session.rs
bevy_arangodb_core/src/versioning/: mod.rs  version_manager.rs
bevy_arangodb_core/tests/: integration_tests.rs
bevy_arangodb_derive/: Cargo.toml
bevy_arangodb_derive/src/: lib.rs
bevy_persistence_database_core/: Cargo.toml
bevy_persistence_database_core/src/: lib.rs
bevy_persistence_database_core/src/components/: guid.rs
bevy_persistence_database_core/src/db/: arango_connection.rs  connection.rs  shared.rs
bevy_persistence_database_core/src/plugins/: persistence_plugin.rs
bevy_persistence_database_core/src/query/: deferred_ops.rs  filter_expression.rs  mod.rs
bevy_persistence_database_derive/: Cargo.toml  LICENSE
bevy_persistence_database_derive/src/: lib.rs
src/: arango_connection.rs  arango_query.rs  arango_session.rs  bevy_plugin.rs  guid.rs  lib.rs  persist.rs
src/bevy/: mod.rs  registration.rs  spawn.rs
src/bevy/components/: guid.rs
src/bevy/params/: hydrator.rs  mod.rs
src/bevy/params/query/: in_flight_queries.rs  join.rs  loader.rs  mod.rs  persistence_query_system_param.rs  presence_spec.rs  query_data_to_components.rs  query_thread_local.rs
src/bevy/params/resource/: mod.rs  persistent_resource_param.rs
src/bevy/plugins/: mod.rs
src/bevy/plugins/persistence_plugin/: commit.rs  dirty_tracking.rs  ecs_plumbing.rs  listeners.rs  mod.rs  plugin.rs  runtime.rs
src/bevy/query/: mod.rs  persistence_query.rs
src/bevy/world_access/: deferred_ops.rs  immediate_world_ptr.rs  mod.rs
src/components/: guid.rs
src/core/: mod.rs
src/core/db/: arango_connection.rs  connection.rs  postgres_connection.rs  shared.rs
src/core/query/: filter_expression.rs  mod.rs  persistence_query_specification.rs
src/core/session/: commit.rs  mod.rs  persistence_session.rs
src/core/versioning/: mod.rs
src/db/: arango_connection.rs  connection.rs  mod.rs  postgres_connection.rs  shared.rs
src/plugins/: mod.rs  persistence_plugin.rs
src/query/: deferred_ops.rs  immediate_world_ptr.rs  join.rs  loader.rs  mod.rs  persistence_query.rs  persistence_query_specification.rs  persistence_query_system_param.rs  presence_spec.rs  query_data_to_components.rs  query_thread_local.rs  tls_config.rs
src/resources/: mod.rs  persistence_session.rs  persistent_resource_param.rs  resource_thread_local.rs
tests/: integration_tests.rs
tests/common/: components.rs  counting_db.rs  db_matrix.rs  mod.rs  resources.rs  setup.rs
tests/integration/: arango_collection_name_tests.rs  batching_tests.rs  concurrency_tests.rs  mod.rs  pass_through_tests.rs  performance_tests.rs  persisting_tests.rs  plugin_tests.rs  querying_tests.rs  routing_tests.rs
tests/integration/querying/: caching_tests.rs  filtering_tests.rs  joining_tests.rs  loading_tests.rs  mod.rs  presence_tests.rs  querying_tests.rs  resource_tests.rs  system_param_tests.rs  transmutation_tests.rs
tests/integration/querying/entities/: caching_tests.rs  filtering_tests.rs  joining_tests.rs  loading_tests.rs  mod.rs  presence_tests.rs  system_param_tests.rs  transmutation_tests.rs
tests/integration/querying/resources/: mod.rs  resource_param_tests.rs  resource_tests.rs
tests/integration/relationships/: db_tests.rs  loading_tests.rs  mod.rs  persistence_tests.rs
