[package]
name = "bevy_arangodb_root"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
  "bevy_arangodb_core",
]

[workspace.package]
edition = "2021"

[workspace.dependencies]
bevy = "0.16.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
arangors = "0.6.0"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros", "time", "net"] }
futures = "0.3.30"
syn = "2.0.58"
quote = "1.0.36"
proc-macro2 = "1.0.79"
mockall = "0.12.1"
ctor = "0.2.0"
once_cell = "1.19.0"
testcontainers = "0.19.0"

[profile.bench]
debug = true

[features]
default = ["postgres", "arango"]
arango = ["bevy_arangodb_core/arango"]
postgres = ["bevy_arangodb_core/postgres"]
ra-fallback = ["bevy_arangodb_derive/ra-fallback"]

[dev-dependencies]
bevy              = { workspace = true }
serde             = { workspace = true, features = ["derive"] }
serde_json        = { workspace = true }
testcontainers    = { workspace = true }
tokio             = { workspace = true, features = ["full", "macros", "rt"] }
ctor              = { workspace = true }
futures           = { workspace = true }
tracing-subscriber = "0.3.19"
bevy_arangodb_core   = { path = "bevy_arangodb_core" }
bevy_arangodb_derive = { path = "bevy_arangodb_derive" }