[package]
name = "bevy_persistence_database"
version = "0.1.0"
edition = "2024"
description = "A persistence and database integration solution for the Bevy game engine"
license-file = "LICENSE"
repository = "https://github.com/JViggiani/bevy_persistence_database"
homepage = "https://github.com/JViggiani/bevy_persistence_database"
documentation = "https://docs.rs/bevy_persistence_database"
readme = "README.md"
keywords = ["bevy", "database", "persistence", "persistent", "arangodb", "postgres", "postgresql", "gamedev", "storage"]
categories = ["game-development", "development-tools", "memory-management", "database", "asynchronous", "caching"]

[workspace]
members = [
  "bevy_persistence_database_core",
  "bevy_persistence_database_derive",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
bevy = "0.16.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
arangors = "0.6.0"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros", "time", "net"] }
futures = "0.3.30"
syn = "2.0.58"
quote = "1.0.36"
proc-macro2 = "1.0.79"
mockall = "0.12.1"
ctor = "0.2.0"
once_cell = "1.19.0"
testcontainers = "0.19.0"

[profile.bench]
debug = true

[dependencies]
bevy_persistence_database_core = { path = "bevy_persistence_database_core" }
bevy_persistence_database_derive = { path = "bevy_persistence_database_derive" }
bevy = { workspace = true }

[features]
default = ["postgres", "arango"]
arango = ["bevy_persistence_database_core/arango"]
postgres = ["bevy_persistence_database_core/postgres"]
ra-fallback = ["bevy_persistence_database_derive/ra-fallback"]

[dev-dependencies]
bevy              = { workspace = true }
serde             = { workspace = true, features = ["derive"] }
serde_json        = { workspace = true }
testcontainers    = { workspace = true }
tokio             = { workspace = true, features = ["full", "macros", "rt"] }
ctor              = { workspace = true }
futures           = { workspace = true }
tracing-subscriber = "0.3.19"
bevy_persistence_database_core   = { path = "bevy_persistence_database_core" }
bevy_persistence_database_derive = { path = "bevy_persistence_database_derive" }