[package]
name = "bevy_arangodb"
version = "0.1.0"
edition.workspace = true

[dependencies]
bevy_arangodb_core = { path = "../bevy_arangodb_core", version = "0.1.0" }
bevy_arangodb_derive = { path = "../bevy_arangodb_derive", version = "0.1.0" }

[dev-dependencies]
bevy = { workspace = true }
tokio = { workspace = true, features = ["full"] }
