[package]
name = "bevy_arangodb"
version = "0.1.0"
edition.workspace = true

[dependencies]
bevy = "0.16.1"
bevy_arangodb_core = { path = "../bevy_arangodb_core", version = "0.1.0" }
bevy_arangodb_derive = { path = "../bevy_arangodb_derive", version = "0.1.0" }

[dev-dependencies]
bevy = { workspace = true }
bevy-tokio-tasks = "0.16.0"
ctor.workspace = true
futures.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
testcontainers.workspace = true
tokio = { workspace = true, features = ["full", "macros", "rt"] }
tracing-subscriber = "0.3.19"
