[package]
name = "bevy_arangodb_core"
version = "0.1.0"
edition.workspace = true

[dependencies]
bevy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
arangors = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
downcast-rs = "2.0.1"
once_cell.workspace = true

[dev-dependencies]
once_cell = { workspace = true }
testcontainers = { workspace = true }
tokio = { workspace = true, features = ["full"] }
bevy_arangodb_derive = { path = "../bevy_arangodb_derive" }
ctor = { workspace = true }
mockall.workspace = true
