[package]
name = "bevy_arangodb_core"
version = "0.1.0"
edition.workspace = true

[dependencies]
bevy = { version = "0.16.1", default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
arangors = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
futures = { workspace = true }
downcast-rs = "2.0.1"
once_cell.workspace = true
bevy-tokio-tasks = "0.16.0"
mockall.workspace = true
futures-lite = "2.6.0"

[dev-dependencies]
once_cell = { workspace = true }
testcontainers = { workspace = true }
tokio = { workspace = true, features = ["full"] }
bevy_arangodb_derive = { path = "../bevy_arangodb_derive" }
ctor = { workspace = true }
mockall.workspace = true
