[package]
name = "bevy_persistence_database_core"
version = "0.1.0"
edition.workspace = true
publish = false
description = "Core functionality for bevy_persistence_database"
license-file = "../LICENSE"
repository = "https://github.com/JViggiani/bevy_persistence_database"
documentation = "https://docs.rs/bevy_persistence_database_core"
readme = "../README.md"
keywords = ["bevy", "database", "persistence", "persistent", "arangodb", "postgres", "postgresql", "gamedev", "storage"]
categories = ["game-development", "development-tools", "memory-management", "database", "asynchronous", "caching"]

[dependencies]
bevy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
arangors = { workspace = true, optional = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
futures = { workspace = true }
downcast-rs = "2.0.1"
once_cell.workspace = true
bevy-tokio-tasks = "0.16.0"
mockall.workspace = true
futures-lite = "2.6.0"
rayon = "1.10.0"
uuid = { version = "1.18.0", features = ["v4"], optional = true }
tokio-postgres = { version = "0.7.13", features = ["with-serde_json-1"], optional = true }

[features]
default = ["postgres", "arango"]
arango = ["dep:arangors"]
postgres = ["dep:tokio-postgres", "dep:uuid"]

[dev-dependencies]
once_cell = { workspace = true }
testcontainers = { workspace = true }
tokio = { workspace = true, features = ["full"] }
bevy_persistence_database_derive = { path = "../bevy_persistence_database_derive" }
ctor = { workspace = true }
mockall.workspace = true
