[package]
name = "bevy_persistence_database_derive"
version = "0.1.0"
edition.workspace = true
publish = false
description = "Derive macros for bevy_persistence_database"
license-file = "../LICENSE"
repository = "https://github.com/your-username/bevy_persistence_database"
documentation = "https://docs.rs/bevy_persistence_database_derive"
readme = "../README.md"
keywords = ["bevy", "database", "persistence", "persistent", "arangodb", "postgres", "postgresql", "gamedev", "storage"]
categories = ["game-development", "development-tools", "memory-management", "database", "asynchronous", "caching"]

[lib]
proc-macro = true

[features]
default = []
ra-fallback = []

[dependencies]
syn = { workspace = true, features = ["derive", "parsing"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }
proc-macro-crate = "3.3.0"
ctor.workspace = true
bevy_reflect = "0.16.1"