[package]
name = "bevy_persistence_database_derive"
version = "0.2.0"
edition.workspace = true
description = "Derive macros for bevy_persistence_database"
license-file = "LICENSE"
repository = "https://github.com/your-username/bevy_persistence_database"
documentation = "https://docs.rs/bevy_persistence_database_derive"
keywords = ["bevy", "database", "persistence", "gamedev", "storage"]
categories = ["game-development", "development-tools", "database", "asynchronous", "caching"]

[lib]
proc-macro = true

[features]
default = []
ra-fallback = []

[dependencies]
syn = { workspace = true, features = ["derive", "parsing"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }
proc-macro-crate = "3.3.0"
ctor.workspace = true